<resources>
    <string name="app_name">MyAppmvp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="txt_detail">Detail</string>
    <string name="btn_detail">Detail</string>
    <string name="btn_back">BACK</string>
    <string name="btn_profile_back">Back</string>
</resources>
